[build-system]
requires = ["hatchling>=1.13.4", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[project]
name = "GPT_SoVITS"
dynamic = ["version"]
description = "A packaged version of GPT_SoVITS designed to be installable"
readme = "README.md"
license = {text = "MIT License"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy==1.26.4",
    "scipy",
    "tensorboard",
    "librosa==0.9.2",
    "numba",
    "pytorch-lightning",
    "gradio>=4.0,<=4.24.0",
    "ffmpeg-python",
    "onnxruntime; sys_platform == 'darwin'",
    "onnxruntime-gpu; sys_platform != 'darwin'",
    "tqdm",
    "funasr==1.0.27",
    "cn2an",
    "pypinyin",
    "pyopenjtalk>=0.3.4",
    "g2p_en",
    "torchaudio",
    "modelscope==1.10.0",
    "sentencepiece",
    "transformers",
    "chardet",
    "PyYAML",
    "psutil",
    "jieba_fast",
    "jieba",
    "LangSegment>=0.2.0",
    "Faster_Whisper",
    "wordsegment",
    "rotary_embedding_torch",
    "pyjyutping",
    "g2pk2",
    "ko_pron",
    "opencc; sys_platform != 'linux'",
    "opencc==1.1.1; sys_platform == 'linux'",
    "python_mecab_ko; sys_platform != 'win32'",
    "fastapi<0.112.2",
    "sounddevice"
]


[project.urls]
Homepage = "https://github.com/JarodMica/GPT-SoVITS/tree/main"

[project.scripts]
"gpt_sovits_api" = "GPT_SoVITS.api_v2:main"

[tool.hatch.build.targets.wheel]
packages = ["GPT_SoVITS"]

[tool.hatch.version]
source = "vcs"